@@ -1,4 +1,4 @@
-This is vsftpd, version 3.0.3
+This is vsftpd, version 3.0.4
 Author: Chris Evans
 Contact: scarybeasts@gmail.com
 Website: http://vsftpd.beasts.org/
