@@ -1,7 +1,7 @@
 #ifndef VSF_VERSION_H
 #define VSF_VERSION_H
 
-#define VSF_VERSION "3.0.3"
+#define VSF_VERSION "3.0.4"
 
 #endif /* VSF_VERSION_H */
 
